--- a/gestionproyectos/src/main/resources/application.properties
+++ b/gestionproyectos/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=gestionproyectos
 
+# Database configuration
 spring.datasource.url=jdbc:postgresql://${HOST}:${PORT}/${DATABASE}
 spring.datasource.username=${USER}
 spring.datasource.password=${PASSWORD}
