--- a/gestionproyectos/src/main/resources/application.properties
+++ b/gestionproyectos/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.datasource.username=${USER}
 spring.datasource.password=${PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+
+# JWT Configuration
+jwt.secret=${JWT_SECRET}
+jwt.expiration=1800000
+jwt.refresh-token.expiration=604800000
+
+
