--- a/gestionproyectos/src/main/resources/application.properties
+++ b/gestionproyectos/src/main/resources/application.properties
@@ -13,4 +13,5 @@ jwt.secret=${JWT_SECRET}
 jwt.expiration=1800000
 jwt.refresh-token.expiration=604800000
 
-
+latex.template.path=src/main/resources/templates
+latex.output.path=src/main/resources/output
