--- a/FrontEndGestion/package.json
+++ b/FrontEndGestion/package.json
@@ -18,6 +18,8 @@
     "eslint": "^9.17.0",
     "lucide-vue-next": "^0.469.0",
     "nuxt": "^3.14.1592",
+    "pinia": "^2.3.0",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "latest",
     "vue-router": "^4.5.0",
     "vuetify": "^3.7.3"
