Update JWT token Related to #137

--- a/gestionproyectos/src/main/resources/application.properties
+++ b/gestionproyectos/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.jpa.show-sql=false
 
 # JWT Configuration
 jwt.secret=${JWT_SECRET}
-jwt.expiration=1800000
-jwt.refresh-token.expiration=604800000
+jwt.expiration=60000
+jwt.refresh-token.expiration=300000
 
 latex.template.path=src/main/resources/templates
 latex.output.path=src/main/resources/output
