--- a/gestionproyectos/src/main/resources/application.properties
+++ b/gestionproyectos/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.show-sql=false
 # JWT Configuration
 jwt.secret=${JWT_SECRET}
 jwt.expiration=60000
-jwt.refresh-token.expiration=300000
+jwt.refresh-token.expiration=604800000
 
 latex.template.path=src/main/resources/templates
 latex.output.path=src/main/resources/output
